--- a/kalvium-pronote/src/index.css
+++ b/kalvium-pronote/src/index.css
@@ -73,6 +73,9 @@ input {
 }
 
 .todoentries {
+  margin-top: 20px;
   display: flex;
-  gap: 10px;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
 }
